<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_example</name>
  <version>0.0.0</version>
  <description>ROS 2 packages for rqt_example</description>

  <maintainer email="jhshim@robotis.com">Jaehyun Shim</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/JaehyunShim/ros2_tutorial</url>
  <author email="jhshim@robotis.com">Jaehyun Shim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!-- <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
